--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -68,14 +68,18 @@ h2{
   margin-top: 41px;
 }
 
-.App button{
+.signup-btn{
   border-radius: 7px;
   padding: 5px;
   margin-left: -853px;
   margin-top: 96px;
+  text-align: center;
 }
 
 .App h4{
   margin-top: 17px;
 }
 
+.selected{
+  background-color: aqua;
+}
